# MiPlay

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.dev.yml  compose.yml  config-example.json  deploy.sh  docker-compose.yml  manage.sh  miplay.py  pyproject.toml  test.html
.github/workflows/: docker-publish.yml
.history/miplay/web/static/: index_20260426154817.html  index_20260426155214.html
.history/old/miair/web/static/: index_20260425193327.html  index_20260426154635.html
miair/: app.py  auth.py  cli.py  config.py  plex.py  speaker.py
miair/airplay/: server.py  utils.py
miair/web/: api.py
miair/web/static/: index.html
miplay/: __init__.py  app.py  bridge.py  cli.py  config.py  xiaomi.py
miplay/airplay/: __init__.py  audio_stream.py  mdns.py  playfair.py  sdphandler.py  server.py  utils.py
miplay/airplay/connections/: session_properties.py  stream.py
miplay/web/: api.py
miplay/web/static/: index.html
old/: docker-compose.yml  miair.py
old/miair/: const.py  conversation.py  plex.py  speaker.py
old/miair/airplay/: __init__.py  audio_stream.py  mdns.py  playfair.py  sdphandler.py  server.py  speaker_airplay.py  utils.py
old/miair/airplay/connections/: session_properties.py  stream.py
old/miair/dlna/: device_server.py  eventing.py  media_buffer.py  renderer.py  soap_handler.py  ssdp.py  templates.py
old/miplay-airplay/: speaker_airplay.py
tests/: test_coexistence.py  test_config_migration.py
