[project]
name = "miplay"
version = "2.0.0"
description = "AirPlay bridge for Xiaomi speakers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "miservice-fork",
    "zeroconf>=0.38.0",
    "pycryptodome>=3.15.0",
    "av>=10.0.0",
]

[project.scripts]
miplay = "miplay.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["miplay*"]

[tool.uv]
package = true
